syntax = "proto3";
package user;
option go_package = "../pb;pb";

service UserService {
  rpc GetUserById(DouyinUserRequest) returns (DouyinUserResponse){}
  rpc Register(DouyinUserRegisterRequest) returns (DouyinUserRegisterResponse){}
  rpc Login(DouyinUserLoginRequest) returns (DouyinUserLoginResponse){}
  rpc IsFollow(IsFollowRequest) returns (IsFollowResponse){}
}
//通过id获取用户信息
message DouyinUserRequest {
  int64 user_id = 1; // 用户id

}

message DouyinUserResponse {
  User user = 3; // 用户信息
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数

}

//注册
message DouyinUserRegisterRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message DouyinUserRegisterResponse {
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

//登录
message DouyinUserLoginRequest {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message DouyinUserLoginResponse {
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

// 查询是否关注
message IsFollowRequest {
  int64 userId = 1;
  int64 followUserId = 2;
}

message IsFollowResponse {
  bool isFollow = 1;
}

